[metadata]
name = numbers_to_words
version = 0.1dev
description = Change numbers to words
author = Tomasz Olszewski
author_email = tomol111@wp.pl
license = MIT
licence_file = LICENSE

[options]
py_modules = numbers_to_words
python_requires = >= 3.10

[options.extras_require]
dev =
	flake8
	mypy
	pytest

[flake8]
max-line-length = 90
